# StandardAlgorithms

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
StandardAlgorithms/: .clang-format  .clang-tidy  Assert.cpp  Assert.h  CMakeLists.txt  CPPLINT.cfg  Standard.Algorithms.Repa.cbp  Standard.Algorithms.cbp  Tests.Run.cpp  Tests.cpp  Tests.h  base_test_case.cpp  base_test_case.h  clear_temporary_files.py  cppcheck.surpress.txt  disable_constructors.h  elapsed_time_ns.h  format_py.bat  ja_ordnung.py  kharasho.py  main.cpp  mainq.pp  qu.cbp  repa.py  test_function.h  test_utilities.h  wsem.py  zi.py
StandardAlgorithms/Geometry/: CalcAngleTests.cpp  CalcAngleTests.h  ConvexHullTrick.h  ConvexHullTrickTests.cpp  ConvexHullTrickTests.h  ConvexToPointPositionTests.cpp  ConvexToPointPositionTests.h  GeometryUtilities.h  PointTests.cpp  PointTests.h  SegmentedRegression.h  SegmentedRegressionOld.h  SegmentedRegressionTests.cpp  SegmentedRegressionTests.h  add_tests.cpp  add_tests.h  calc_angle_tests.cpp  calc_angle_tests.h  closest_pair_of_points_in_2d_plane.h  closest_pair_of_points_in_2d_plane_tests.cpp  closest_pair_of_points_in_2d_plane_tests.h  convex_hull.h  convex_hull_tests.cpp  convex_hull_tests.h  convex_hull_trick.h  convex_hull_trick_last_concert.cpp  convex_hull_trick_last_concert.h  convex_hull_trick_last_concert_test.cpp  convex_hull_trick_tests.cpp  convex_hull_trick_tests.h  convex_min_weight_triangulation.h  convex_min_weight_triangulation_tests.cpp  convex_min_weight_triangulation_tests.h  convex_to_point_position_tests.cpp  epsilon_default.h  line.h  (+28 more)
(+1384 files in other folders)
